@@ -13,6 +13,9 @@ IMPORTANT NOTE to users upgrading from pre-0.9.x versions of the Architect:
 0.9.10
 *Fixed the relationship lines to be straight when printing if they were
  already straight in the playpen.
+*Added preliminary support for Apache Derby.  It is now possible to connect
+ to a Derby instance and use it as a source database.  Forward engineering
+ is not available yet.
 
 0.9.9
 *Added support for explicitly named sequences in PostgreSQL and Oracle
